kubernetes/app-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manpower-app
spec:
  selector:
    matchLabels:
      app: manpower-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: manpower-app
    spec:
      imagePullSecrets:
      - name: regsecret
      containers:
      - image: manpower.inc/manpower-inc:1.0-SNAPSHOT
        name: manpower-app
        ports:
        - containerPort: 80
          name: manpower-app

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manpower-grafana
spec:
  selector:
    matchLabels:
      app: manpower-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: manpower-app
    spec:
      containers:
      - image: grafana/grafana
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manpower-prometheus
spec:
  selector:
    matchLabels:
      app: manpower-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: manpower-app
    spec:
      containers:
      - image: prom/prometheus
        command: ["--config.file=/etc/prometheus/prometheus.yml"]
        name: prometheus
        ports:
        - containerPort: 9090
          name: prometheus
        volumeMounts:
        - name: prometheus-config-vol
          mountPath: /etc/prometheus/
      volumes:
      - name: prometheus-config-vol
        configMap:
          name: prometheus-config
          items:
            - key: prometheus.yml
              path: prometheus.yml
