kubernetes/keywords-db-deployement.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: manpower-app-data
spec:
  ports:
  - port: 3306
  selector:
    app: manpower-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manpower-db
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: manpower-db-data
