kubernetes/app-ingresses-service.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: manpower-ingress
spec:
  rules:
  - host: manpower.devops.se
    http:
      paths:
      - path: /
        backend:
          serviceName: manpower-app
          servicePort: 80
      - path: /grafana
        backend:
          serviceName: manpower-app
          servicePort: 3000
      - path: /prometheus
        backend:
          serviceName: manpower-app
          servicePort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: manpower-app
spec:
  ports:
  - port: 80
    name: manpower-app
  - port: 3000
    name: grafana
  - port: 9090
    name: prometheus
  selector:
    app: manpower-app
  clusterIP: None
